# mathlib

./: .gitignore  CMakeLists.txt  README.md  README.rst
.github/workflows/: workflow.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: api.rst  tree.rst
include/: CMakeLists.txt
include/mathlib/: CMakeLists.txt  math.h
src/: CMakeLists.txt
src/mathlib/: CMakeLists.txt  MathLibConfig.cmake.in  math.cpp
tests/: CMakeLists.txt  test_mathlib.cpp
